elements positon given to father header in css and image logo included in html

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <p id="small description">Lorem ipsum</p>
         </div>
         <div>
-            <img src = "https://i.pinimg.com/236x/23/fe/e5/23fee565dfab6154d962acb3c5cb6485.jpg">
+            <img class="logo" src="https://andreabcm.github.io/Proyecto-final/img/logo.png">
         </div>
     
     </header>
