--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet">   
+    <link href=link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap" rel="stylesheet">   
     <script src="./index.js" type="text/javascript"></script>
     <title>Food App Project FF5 BCN</title>
 </head>
@@ -18,9 +19,8 @@
     <header>
 
         <div>
-            <h4>Food House</h4>
             <h1 id="web purpose" >Food For Home</h1>
-            <p id="small description">Lorem ipsum</p>
+            <p id="small description">Lorem ipsum dolor, sit amet consectetur adipisicing elit</p>
         </div>
         <div>
             <img class="logo" src="https://andreabcm.github.io/Proyecto-final/img/logo.png">
